// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`encoded-greater-than.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
> > a
> &gt; b

> > a
> &#62; b

> > a
> &#x3e; b

> > a
> &GT; b

> > a
> &#062; b

> > a
> &#x3E; b

=====================================output=====================================
> > a &gt; b

> > a &#62; b

> > a &#x3e; b

> > a &GT; b

> > a &#062; b

> > a &#x3E; b

================================================================================
`;

exports[`encoded-newline.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
> a &#10; b
> &gt; c

> a &#xA; b
> &#62; c

> a &NewLine; b
> \\> c

> a &#10; b
    > c

> a &newline; b
> \\> c

> a \\&NewLine; b
> \\> c

> a \\\\&NewLine; b
> \\> c

=====================================output=====================================
> a &#10; b &gt; c

> a &#xA; b &#62; c

> a &NewLine; b \\> c

> a &#10; b > c

> a &newline; b \\> c

> a \\&NewLine; b \\> c

> a \\\\&NewLine; b \\> c

================================================================================
`;

exports[`escaped-greater-than.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
> \\>
> \\>

> *text* > \\>

> abc
> \\> abc

=====================================output=====================================
> \\> \\>

> _text_ > \\>

> abc \\> abc

================================================================================
`;

exports[`indented-greater-than.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
> first
    > second

> first
	> second

> > first
    > second

> first
    >> second

=====================================output=====================================
> first > second

> first > second

> > first > second

> first >> second

================================================================================
`;

exports[`issue-19528.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
> test\\>

> **test**\\>

> \\>

=====================================output=====================================
> test\\>

> **test**\\>

> \\>

================================================================================
`;
